# chat-with-your-codebase

./: .gitignore  README.md  main.py  pyproject.toml  run.sh
.src/: openai_client.py
src/: codebase_graph_explorer.py  codebase_tokenizer.py  main.py  openai_client.py  rag_database.py
src/lib/: bm25_search.py  prompts.py  streamlit_helper.py
