[project]
name = "openai-streamlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.47.1", 
    "openai>=1.98.0",
    "polars>=1.32.3",
    "tiktoken>=0.11.0",
    "numpy>=2.3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.mypy]
python_version = "3.12"
python_executable = ".venv/bin/python"

[tool.ruff]
target-version = "py312"
respect-gitignore = true
line-length = 135

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "B",   # bugbear
  "C4",  # comprehensions
  "TCH", # type-checking hygiene
  "SIM", # simplify
  "ANN", # type hints
  "ARG", # unused arguments
  "RUF"  # Ruff-native rules
]
ignore = [
  "RUF100"
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["openai_client"]
section-order = ["standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
# Enables Ruff formatter with default options (Black-compatible)
